force-app/main/default/objects/Question_Response__c/Question_Response__c.object-meta.xml
<CustomObject>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>