force-app/main/default/objects/Question_Response__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The body of the response to this object</description>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>