force-app/main/default/objects/Question_Response__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <formula>IF(Total_Votes__c == 0 ,0,(2 *  Upvotes__c -  Total_Votes__c) *  (IF((2 *  Upvotes__c -  Total_Votes__c) &gt; 0, Upvotes__c / Total_Votes__c, (1 -(Upvotes__c / Total_Votes__c))) ^ 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rating</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>