force-app/main/default/objects/Question_Response__c/fields/Total_Votes__c.field-meta.xml
<CustomField>
    <fullName>Total_Votes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of votes that this response has.</description>
    <inlineHelpText>The total number of votes made on this response</inlineHelpText>
    <label>Total Votes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>