force-app/main/default/objects/Question_Response__c/fields/Upvotes__c.field-meta.xml
<CustomField>
    <fullName>Upvotes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of upvotes that this response has.</description>
    <inlineHelpText>How many people upvoted this response</inlineHelpText>
    <label>Upvotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>