force-app/main/default/objects/Question_Response__c/validationRules/checkLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>checkLocked</fullName>
    <active>true</active>
    <description>Checks if a question is locked.</description>
    <errorConditionFormula>IF( Question__r.Locked__c , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Question is locked and cannot accept any more responses.</errorMessage>
</ValidationRule>